--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,11 @@
 @import "tailwindcss";
 
+
+.box {
+  transition: transform 0.3s ease;
+
+}
+
+.box:hover {
+    transform: perspective(20px) rotateX(2deg) translateY(-50px);
+}
